# revolut-home-task

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  mockers.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py
src/: app.py  db.py
test/: app_test.py  db_test.py
