[tool.poetry]
name = "revolut"
version = "0.0.1"
description = "Revolut homework"
authors = ["Kazimierz Sroka <kazz.sroka@gmail.com>"]
license = "Apache License, Version 2.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
gunicorn = "^20.1.0"
uvicorn = "^0.15.0"
CouchDB = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=html"
